# flipper-agent-indicator

./: .gitignore  PLAN.md  README.md  install.sh
daemon/: pyproject.toml
daemon/flipper_indicator/: ble.py  bridge.py  cli.py  config.py  daemon.py  patterns.py  protocol.py  socket_server.py
daemon/tests/: test_ble.py  test_bridge.py  test_cli.py  test_config.py  test_patterns.py  test_protocol.py  test_socket_server.py
firmware/: README.md
firmware/flipper_agent_indicator/: application.fam  ble_serial.c  ble_serial.h  effects.c  effects.h  flipper_agent_indicator.c  protocol.c  protocol.h  render.c  render.h  test_protocol.c
firmware/flipper_agent_indicator/assets/: README.md
hooks/: claude-hooks.json  claude-notify.sh  codex-notify-chain.sh  codex-notify.sh  opencode-flipper-indicator.js
scripts/: generate-art.py  install-autostart.sh  pair.sh
