[project]
name = "flipper-agent-indicator"
version = "0.1.0"
description = "Flipper Zero notifications for AI agents (Claude/Codex/OpenCode)"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "click>=8.1",
    "structlog>=24.1",
]

[project.scripts]
flipper-indicator = "flipper_indicator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flipper_indicator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
